--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@900&display=swap" rel="stylesheet">
     <title>My first Github Reop</title>
+
 </head>
+
 <body>
-    
+    <section class="main-container">
+        <div><img src="images/developer.png" alt=""></div>
+        <div class="container">
+            <div class="half-width">
+                <h3>Hi, Iam</h3>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
+                    behaved
+                    moments.</p>
+            </div>
+            <div class="half-width nobin"><img src="images/hardy.png" alt=""></div>
+        </div>
+    </section>
+
+
+
+
 </body>
+
 </html>
